--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <script src="script.js" defer></script>
 </head>
 <body>
-    
+    <div class="note">JS CUSTOM EVENT DEMO</div>
 </body>
 </html>
